# soxyproxy

./: .gitignore  .pre-commit-config.yaml  .style.yapf  .todo.md  Dockerfile  README.md  config.example.toml  justfile  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run.py  runrun.py
.github/workflows/: build.yml  pypi.yml  tests.yml
nosocks/: __init__.py  consts.py  exceptions.py  server.py  socks5_handler.py
nosocks/auths/: auth.py  basic_auth.py  none_auth.py  username_auth.py
nosocks/messages/: auth_username_reply.py  auth_username_request.py  client_greeting.py  client_request.py  handshake_client.py  handshake_server.py  reply_server.py  request_client.py  server_greeting.py  server_reply.py  username_auth_client.py  username_auth_server.py
nosocks/rules/: rules.py  ruleset.py
soxy/: __init__.py  __main__.py  _base.py  _config.py  _errors.py  _logger.py  _packages.py  _proxy.py  _ruleset.py  _session.py  _socks.py  _socks4.py  _socks5.py  _tcp.py  _types.py  _utils.py  _wrappers.py
soxy/cli_app/: config.py
soxyproxy/: __init__.py  __main__.py  _base.py  _config.py  _connection.py  _errors.py  _proxy.py  _ruleset.py  _service.py  _socks4.py  _socks5.py  _tcp.py  _transports.py  _types.py  _utils.py  app.py  connections.py  consts.py  exceptions.py  protocols.py  server.py  socks4.py  socks5.py  socks_versions.py  utils.py
soxyproxy/cli_app/: config.py
soxyproxy/internal/: authers.py  ruleset.py  socks4.py  socks5.py
soxyproxy/models/: base.py  client.py  ruleset.py
soxyproxy/models/socks4/: connection.py  connection_request.py  connection_response.py
soxyproxy/models/socks5/: common.py  connection.py  connection_request.py  connection_request_message.py  connection_response_message.py  handshake.py  handshake_request.py  handshake_response.py  username_auth.py  username_auth_request_message.py  username_auth_response_message.py
soxyproxy/server/: __init__.py  request_message.py  response_message.py  server.py
soxyproxy/servers/: base.py  server.py  socks4.py  socks5.py
soxyproxy/socks/: __init__.py  protocol_request.py  protocol_response.py  request_message.py  response_message.py  socks.py
soxyproxy/socks4/: __init__.py  codes.py  socks4.py
soxyproxy/socks4/messages/: __init__.py  connection_request_message.py  connection_response_message.py  const.py  request.py  response.py
soxyproxy/socks4/messages/conection/: connection_request.py  connection_response.py
soxyproxy/socks5/: __init__.py  codes.py  socks5.py
soxyproxy/socks5/messages/: __init__.py  connection_request_message.py  connection_response_message.py  const.py  handshake_request_message.py  handshake_response_message.py  username_auth_request_message.py  username_auth_response_message.py
soxyproxy/socks5/messages/auth/: username_auth_request.py  username_auth_response.py
soxyproxy/socks5/messages/connection/: connection_request.py  connection_response.py
soxyproxy/socks5/messages/handshake/: handshake_request.py  handshake_response.py
tests/: conftest.py  test_config.py  test_errors.py  test_main.py  test_packages.py  test_proxy.py  test_ruleset.py  test_session.py  test_socks.py  test_socks4.py  test_socks5.py  test_tcp.py  test_utils.py  test_wrappers.py
