[project]
name = "soxyproxy"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
license = "GPL-3.0"
authors = [
  { name = "Aleksandr Shpak", email = "shpaker@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
keywords = ["proxy", "socks", "socks4", "socks4a", "socks5", "socks5h"]

[project.urls]
Homepage = "https://github.com/shpaker/soxyproxy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["soxy"]

[dependency-groups]
dev = [
  "pytest-asyncio>=1.3",
  "pytest>=9.0",
  "ruff>=0.14",
  "pre-commit>=4.5",
  "mypy>=1.19",
    "httpx>=0.28.0",
    "httpx-socks>=0.10",
    "httpcore>=1.0.8",
]

[project.scripts]
soxy = "soxy.__main__:main"

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = [
  ".venv",
]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.ignore = [
    "S101", # Too many arguments to function call
    "TC001", # Move application import into type-checking block - too aggressive, breaks runtime
    "TC003", # Move standard library import into type-checking block - too aggressive, breaks runtime
    "UP040", # Type alias uses TypeAlias annotation - we need it for Python 3.14 compatibility
    "UP043", # Unnecessary default type arguments in Generator
]
lint.select = [
  "F", # Pyflakes
  "C90", # mccabe
  "I", # isort
  "N", # pep8-naming
  # "D", # pydocstyle
  "UP", # pyupgrade
  "YTT", # flake8-2020
  "ANN", # flake8-annotations
  "ASYNC", # flake8-async
  "S", # flake8-bandit
  "BLE", # flake8-blind-except
  # "FBT", # flake8-boolean-trap
  "B", # flake8-bugbear
  "A", # flake8-builtins
  #  "COM", # flake8-commas
  # "CPY", # flake8-copyright
  "C4", # flake8-comprehensions
  # "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  # "DJ", # flake8-django
  "EM", # flake8-errmsg
  "EXE", # flake8-executable
  # "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "G", # flake8-logging-format
  "INP", # flake8-no-pep420
  "PIE", # flake8-pie
  "T20", # flake8-print
  # "PYI", # flake8-pyi
  # "PT", # flake8-pytest-style
  # "Q", # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLF", # flake8-self
  "SLOT", # flake8-slots
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "INT", # flake8-gettext
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "TD", # flake8-todos
  "FIX", # flake8-fixme
  "ERA", # eradicate
  # "PD", # pandas-vet
  "PGH", # pygrep-hooks
  "PL", # Pylint
  "TRY", # tryceratops
  "FLY", # flynt
  # "NPY", # NumPy-specific rules
  # "AIR", # Airflow
  "PERF", # Perflint
  "FURB", # refurb
  "LOG", # flake8-logging
  "RUF", # Ruff-specific rules
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
follow_imports = "silent"
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:coroutine 'async_main' was never awaited:RuntimeWarning",
    "ignore:'return' in a 'finally' block:SyntaxWarning",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
